Docker_K8S/K8S/concepts/afinity.yaml
apiVersion: v1
kind: Pod
metadata: 
  labels:
    run: redis
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: disktype
            operator: In
            values:
            - ssd
  containers:
  - name: redis
    image: redis
    imagePullPolicy: IfNotPresent
status: {}
