Docker_K8S/K8S/concepts/cmdemo2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cmdemo2-pod
  labels:
    app.kubernetes.io/name: CmdemoApp2
spec:
  containers:
  - name: cmdemoapp-container
    image: busybox:1.28
    command: ['sh', '-c', 'echo The app is running! && sleep 3600']
