Docker_K8S/K8S/concepts/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nginx-deamonset
  labels:
    app: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      name: nginx
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.12-alpine
        ports:
        - containerPort: 80
