Docker_K8S/K8S/concepts/mem-request1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: memory-demo-2
  namespace: memory-example
spec:
  containers:
  - name: memory-demo-ctr
    image: polinux/stress
    resources:
      requests:
        memory: "100Mi"
      limits:
        memory: "200Mi"
    command: ["stress"]
    args: ["--vm", "1", "--vm-bytes", "250M", "--vm-hang", "1"]
