Docker_K8S/K8S/concepts/mem-request2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: memory-demo-3
  namespace: memory-example
spec:
  containers:
  - name: memory-demo-ctr
    image: polinux/stress
    resources:
      requests:
        memory: "1000Gi"
      limits:
        memory: "2000Gi"
    command: ["stress"]
    args: ["--vm", "1", "--vm-bytes", "250M", "--vm-hang", "1"]
