Docker_K8S/K8S/concepts/multicontainer_pod.yaml
apiVersion: v1
kind: Pod
metadata: 
 name: mymulticontapp
 labels:
   name: multicontainapp-pod
spec:
   containers: 
   - name: myapp-container
     image: busybox:1.28
     command: ['sh', '-c', 'echo the app is running && sleep 3600']
