Docker_K8S/K8S/concepts/selector.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: redis
    tier: backend
  name: redis
  namespace: default
spec:
  containers:
  - image: redis
    name: redis-container
