Docker_K8S/K8S/concepts/tolerations.yaml
apiVersion: v1
kind: Pod
metadata: 
  labels:
    run: redis
spec:
  containers:
  - image: redis
    name: redis
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
  tolerations:
  - key: "gpu"
    operator: "Equal"
    value: "true"
    effect: "NoSchedule"
status: {}
