Docker_K8S/K8S/concepts/clusterip.yaml
apiVersion: v1
kind: Service
metadata: 
  name: clusterip-service
  labels:
    env: demo
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
      app: nginx
