Docker_K8S/K8S/concepts/externalname.yaml
apiVersion: v1
kind: Service
metadata:
  name: externalname-service
spec:
  type: ExternalName
  externalName: mydatabase.example.com
