Docker_K8S/K8S/concepts/loadbalancer_svc.yaml
apiVersion: v1
kind: Service
metadata: 
  name: loadbalancer-service
  labels:
    env: demo
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
      app: nginx
