Docker_K8S/K8S/concepts/service_nodeport.yaml
apiVersion: v1
kind: Service
metadata: 
  name: nodeport-service
  labels:
    env: demo
spec:
  type: NodePort
  ports:
  - nodePort: 30001
    port: 80
    targetPort: 80
  selector:
      app: nginx
