Docker_K8S/K8S/concepts/nwpold37.yaml
apiVersion: v1
kind: NetworkPolicy
metadata:
  name: access-redis
spec:
  podSelector:
    matchLabels:
      app: redis
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: "redis"
